# codea-cli

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  SKILL.md  dist-workspace.toml
.github/workflows/: build-windows.yml  release.yml
docs/: packaging.md
src/: config.rs  discover.rs  local.rs  main.rs  mcp.rs
wix/: main.wxs
