[package]
name = "codea-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "codea"
path = "src/main.rs"

[dependencies]
anyhow = "1"
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
mdns-sd = "0.11"
plist = "1.7"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
