[package]
name = "codea-cli"
version = "0.1.4"
edition = "2024"
description = "CLI for working with Codea runtimes over MCP"
repository = "https://github.com/twolivesleft/codea-cli"
homepage = "https://github.com/twolivesleft/codea-cli"
authors = ["Sim Saens <simeon@twolivesleft.com>"]
license = "MIT OR Apache-2.0"

[[bin]]
name = "codea"
path = "src/main.rs"

[dependencies]
directories = "5"
anyhow = "1"
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
flume = "0.11"
mdns-sd = "0.11"
plist = "1.7"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[package.metadata.wix]
upgrade-guid = "088E8154-4DE5-4E0E-A1C0-5CC9EBC0027E"
path-guid = "12910971-CFB5-405D-BCE1-383C7724B3D9"
license = false
eula = false
